# OpenGL3D

./: .gitignore  .gitmodules  CMakeLists.txt
archive/: linalg.cpp  linalg.hpp
include/glad/: glad.h
src/: Material.cpp  Material.hpp  config.cpp  config.hpp  glad.c  main.cpp  triangle_mesh.cpp  triangle_mesh.h  triangle_mesh.hpp
src/shader/: fragment.glsl  fragment.txt  vertex.glsl  vertex.txt
